bin_PROGRAMS = echosvr echocli filesvr filecli

echosvr_LDADD = -L../src -lkens -lxml2 -lpthread
echosvr_SOURCES = echosvr.c

echocli_LDADD = -L../src -lkens -lxml2 -lpthread
echocli_SOURCES = echocli.c

filesvr_LDADD = -L../src -lkens -lxml2 -lpthread
filesvr_SOURCES = filesvr.c

filecli_LDADD = -L../src -lkens -lxml2 -lpthread
filecli_SOURCES = filecli.c
